--- a/muunna-frontend/package.json
+++ b/muunna-frontend/package.json
@@ -9,7 +9,9 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
     "react-https-redirect": "^1.1.0",
+    "react-meta-tags": "^0.7.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-router-sitemap": "^1.2.0",
