--- a/muunna-frontend/public/manifest.json
+++ b/muunna-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Laskejamuunna.fi",
+  "name": "Laske & Muunna - Laskimet ja muuntimet kaikkiin tarpeisiin",
   "icons": [
     {
       "src": "favicon.ico",
